bg-color changed by Ohi

--- a/New Index-3/new-index3.html
+++ b/New Index-3/new-index3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>New Index-3</title>
+    <title>Price Table-7</title>
     <meta name="description" content="" />
     <!-- CSS -->
     <link
@@ -14,8 +14,7 @@
       onload="if(media!='all')media='all'"
     />
 
-    <link
-      rel="stylesheet"
+    <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
