--- a/New Index-4/new-index4.html
+++ b/New Index-4/new-index4.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>New Index-4</title>
+    <title>Price Table-8</title>
     <!-- CSS  -->
     <link rel="stylesheet" href="./new-css4/new-index4.css" />
     <link
