--- a/New Index-2/new-index2.html
+++ b/New Index-2/new-index2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>New Index-2</title>
+    <title>Price Table-6</title>
     <meta name="description" content="" />
     <!-- CSS -->
 
