--- a/landing-page.html
+++ b/landing-page.html
@@ -19,61 +19,61 @@
         <div class="row link-buttons">
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 1:</p>
+                    <p>Click here & Explore Table 1:</p>
                     <a href="./Index/index.html" target="_blank">Table 1!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 2:</p>
+                    <p>Click here & Explore Table 2:</p>
                     <a href="./Index2/index2.html" target="_blank">Table 2!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 3:</p>
+                    <p>Click here & Explore Table 3:</p>
                     <a href="./Index3/index3.html" target="_blank">Table 3!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 4:</p>
+                    <p>Click here & Explore Table 4:</p>
                     <a href="./Index4/index4.html" target="_blank">Table 4!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 5:</p>
+                    <p>Click here & Explore Table 5:</p>
                     <a href="./New Index-1/new-index1.html" target="_blank">Table 5!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 6:</p>
+                    <p>Click here & Explore Table 6:</p>
                     <a href="./New Index-2/new-index2.html" target="_blank">Table 6!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 7:</p>
+                    <p>Click here & Explore Table 7:</p>
                     <a href="./New Index-3/new-index3.html" target="_blank">Table 7!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 8:</p>
+                    <p>Click here & Explore Table 8:</p>
                     <a href="./New Index-4/new-index4.html" target="_blank">Table 8!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 9:</p>
+                    <p>Click here & Explore Table 9:</p>
                     <a href="./New Index-5/new-index5.html" target="_blank">Table 9!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
-                    <p>Table 10:</p>
+                    <p>Click here & Explore Table 10:</p>
                     <a href="./New Index-6/new-index6.html" target="_blank">Table 10!</a>
                 </div>
             </div>
