name changed for index5

--- a/Index5/index5.html
+++ b/Index5/index5.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
 
     <link
-      href="./new-css1/bootstrap.min.css"
+      href="./css5/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
@@ -20,10 +20,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
-    <link href="./new-css1/new-index1-style.css" rel="stylesheet" />
+    <link href="./css5/main-style5.css" rel="stylesheet" />
 
     <link
-      href="./new-css1/slick.css"
+      href="./css5/slick.css"
       rel="stylesheet"
       onload="if(media!='all')media='all'"
     />
@@ -153,7 +153,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg mb-3"
-                          src="./png-new-index1/single-user_package.png"
+                          src="./png-index5/single-user_package.png"
                           alt=""
                         />
                       </div>
@@ -207,7 +207,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg mb-3"
-                          src="./png-new-index1/couple_package.png"
+                          src="./png-index5/couple_package.png"
                           alt=""
                         />
                       </div>
@@ -261,7 +261,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg mb-3"
-                          src="./png-new-index1/student_package.png"
+                          src="./png-index5/student_package.png"
                           alt=""
                         />
                       </div>
@@ -316,7 +316,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg mb-3"
-                          src="./png-new-index1/family_package.png"
+                          src="./png-index5/family_package.png"
                           alt=""
                         />
                       </div>
@@ -379,7 +379,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg mb-3"
-                          src="./png-new-index1/large-group_package.png"
+                          src="./png-index5/large-group_package.png"
                           alt=""
                         />
                       </div>
@@ -440,8 +440,8 @@
     </div>
 
     <!-- Javascript -->
-    <script src="./new-js1/jquery.min.js"></script>
-    <script defer src="./new-js1/slick.min.js"></script>
-    <script defer src="./new-js1/pricetable-new-index1.js"></script>
+    <script src="./js5/jquery.min.js"></script>
+    <script defer src="./js5/slick.min.js"></script>
+    <script defer src="./js5/pricetable5.js"></script>
   </body>
 </html>
