renamed to Index7

--- a/Index6/index6.html
+++ b/Index6/index6.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
 
     <link
-      href="./new-css2/bootstrap.min.css"
+      href="./css6/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
@@ -20,10 +20,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
-    <link href="./new-css2/new-index2-style.css" rel="stylesheet" />
+    <link href="./css6/main-style6.css" rel="stylesheet" />
 
     <link
-      href="./new-css2/slick.css"
+      href="./css6/slick.css"
       rel="stylesheet"
       onload="if(media!='all')media='all'"
     />
@@ -140,7 +140,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png "
+                          src="./img6/klipartz.com.png "
                           alt=""
                         />
                       </div>
@@ -183,7 +183,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -226,7 +226,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -269,7 +269,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -312,7 +312,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -360,7 +360,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -403,7 +403,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -446,7 +446,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -489,7 +489,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -532,7 +532,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -580,7 +580,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -623,7 +623,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -666,7 +666,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -709,7 +709,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -752,7 +752,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -800,7 +800,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -843,7 +843,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -886,7 +886,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -929,7 +929,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -972,7 +972,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1020,7 +1020,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1063,7 +1063,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1106,7 +1106,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1149,7 +1149,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1192,7 +1192,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1240,7 +1240,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1283,7 +1283,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1326,7 +1326,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1369,7 +1369,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1412,7 +1412,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1460,7 +1460,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1503,7 +1503,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1546,7 +1546,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1589,7 +1589,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1632,7 +1632,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1680,7 +1680,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1723,7 +1723,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1766,7 +1766,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1809,7 +1809,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1852,7 +1852,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1900,7 +1900,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1943,7 +1943,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -1986,7 +1986,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2029,7 +2029,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2072,7 +2072,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2120,7 +2120,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2163,7 +2163,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2206,7 +2206,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2249,7 +2249,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2292,7 +2292,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./img/klipartz.com.png"
+                          src="./img6/klipartz.com.png"
                           alt=""
                         />
                       </div>
@@ -2335,8 +2335,8 @@
       </section>
     </div>
     <!-- Javascript -->
-    <script src="./new-js2/jquery.min.js"></script>
-    <script defer src="./new-js2/slick.min.js"></script>
-    <script defer src="./new-js2/pricetable-new-index2.js"></script>
+    <script src="./js6/jquery.min.js"></script>
+    <script defer src="./js6/slick.min.js"></script>
+    <script defer src="./js6/pricetable6.js"></script>
   </body>
 </html>
