--- a/Index7/index7.html
+++ b/Index7/index7.html
@@ -8,7 +8,7 @@
     <meta name="description" content="" />
     <!-- CSS -->
     <link
-      href="./new-css3/bootstrap.min.css"
+      href="./css7/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
@@ -18,7 +18,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
 
-    <link href="./new-css3/new-index3-style.css" rel="stylesheet" />
+    <link href="./css7/main-style7.css" rel="stylesheet" />
   </head>
   <body>
     <div class="box-container limit-width">
@@ -74,7 +74,7 @@
                         <div class="upper-top-content">
                           <img
                             class="svg"
-                            src="./img-new-index3/t3 1.png"
+                            src="./img7/t3 1.png"
                             alt=""
                           />
                         </div>
@@ -122,7 +122,7 @@
                         <div class="upper-top-content">
                           <img
                             class="svg"
-                            src="./img-new-index3/pt-img-blue.png"
+                            src="./img7/pt-img-blue.png"
                             alt=""
                           />
                         </div>
@@ -171,7 +171,7 @@
                         <div class="upper-top-content">
                           <img
                             class="svg"
-                            src="./img-new-index3/pt-img-orange.png"
+                            src="./img7/pt-img-orange.png"
                             alt=""
                           />
                         </div>
@@ -219,7 +219,7 @@
     </div>
 
     <!-- Javascript -->
-    <script src="./new-js3/jquery.min.js"></script>
-    <script defer src="./new-js3/pricetable-new-index3.js"></script>
+    <script src="./js7/jquery.min.js"></script>
+    <script defer src="./js7/pricetable7.js"></script>
   </body>
 </html>
