--- a/Index8/index8.html
+++ b/Index8/index8.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Price Table-8</title>
     <!-- CSS  -->
-    <link rel="stylesheet" href="./new-css4/new-index4.css" />
+    <link rel="stylesheet" href="./css8/main-style8.css" />
     <link
-      href="./new-css4/bootstrap.min.css"
+      href="./css8/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
@@ -107,7 +107,7 @@
       </div>
     </section>
     <!-- JAVASCRIPT  -->
-    <script src="./new-js4/jquery.min.js"></script>
-    <script defer src="./new-js4/pricetable-new-index4.js"></script>
+    <script src="./js8/jquery.min.js"></script>
+    <script defer src="./js8/pricetable8.js"></script>
   </body>
 </html>
