--- a/Index9/index9.html
+++ b/Index9/index9.html
@@ -8,12 +8,12 @@
     <meta name="description" content="" />
     <!-- CSS -->
     <link
-      href="./new-css5/bootstrap.min.css"
+      href="./css9/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
     />
-    <link href="./new-css5/new-index5.css" rel="stylesheet" />
+    <link href="./css9/main-style9.css" rel="stylesheet" />
   </head>
   <body>
     <div class="box-container limit-width">
@@ -69,7 +69,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./png-new-index5/single-user_package.png"
+                          src="./png-index9/single-user_package.png"
                           alt=""
                         />
                       </div>
@@ -129,7 +129,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./png-new-index5/team_package.png"
+                          src="./png-index9/team_package.png"
                           alt=""
                         />
                       </div>
@@ -192,7 +192,7 @@
                       <div class="upper-top-content">
                         <img
                           class="svg"
-                          src="./png-new-index5/large-group_package.png"
+                          src="./png-index9/large-group_package.png"
                           alt=""
                         />
                       </div>
@@ -253,7 +253,7 @@
     </div>
 
     <!-- Javascript -->
-    <script src="./new-js5/jquery.min.js"></script>
-    <script defer src="./new-js5/pricetable-new-index5.js"></script>
+    <script src="./js9/jquery.min.js"></script>
+    <script defer src="./js9/pricetable9.js"></script>
   </body>
 </html>
