--- a/Index10/index10.html
+++ b/Index10/index10.html
@@ -8,12 +8,12 @@
     <meta name="description" content="" />
     <!-- CSS -->
     <link
-      href="./new-css6/bootstrap.min.css"
+      href="./css10/bootstrap.min.css"
       rel="stylesheet"
       class="ltr"
       onload="if(media!='all')media='all'"
     />
-    <link href="./new-css6/new-index6.css" rel="stylesheet" />
+    <link href="./css10/main-style10.css" rel="stylesheet" />
   </head>
   <body>
     <div class="box-container limit-width">
@@ -71,7 +71,7 @@
                           <div class="upper-top-content">
                             <img
                               class="svg"
-                              src="./png-new-index6/single-user_package.png"
+                              src="./png-index10/single-user_package.png"
                               alt=""
                             />
                           </div>
@@ -138,7 +138,7 @@
                           <div class="upper-top-content">
                             <img
                               class="svg"
-                              src="./png-new-index6/team_package.png"
+                              src="./png-index10/team_package.png"
                               alt=""
                             />
                           </div>
@@ -206,7 +206,7 @@
                           <div class="upper-top-content">
                             <img
                               class="svg"
-                              src="./png-new-index6/large-group_package.png"
+                              src="./png-index10/large-group_package.png"
                               alt=""
                             />
                           </div>
@@ -274,7 +274,7 @@
     </div>
 
     <!-- Javascript -->
-    <script src="./new-js6/jquery.min.js"></script>
-    <script defer src="./new-js6/pricetable-new-index6.js"></script>
+    <script src="./js10/jquery.min.js"></script>
+    <script defer src="./js10/pricetable10.js"></script>
   </body>
 </html>
