--- a/Index5/index5.html
+++ b/Index5/index5.html
@@ -113,7 +113,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-12 text-center mt-4" id="periodheader">
+        <div class="col-md-12 text-center" id="periodheader">
           <ul class="btn-group">
             <li
               class="btn btn-secondary active mb-2 me-3 periodheader1"
