--- a/landing-page.html
+++ b/landing-page.html
@@ -44,37 +44,37 @@
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 5:</p>
-                    <a href="./New Index-1/new-index1.html" target="_blank">Table 5!</a>
+                    <a href="./Index5/index5.html" target="_blank">Table 5!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 6:</p>
-                    <a href="./New Index-2/new-index2.html" target="_blank">Table 6!</a>
+                    <a href="./Index6/index6.html" target="_blank">Table 6!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 7:</p>
-                    <a href="./New Index-3/new-index3.html" target="_blank">Table 7!</a>
+                    <a href="./Index7/index7.html" target="_blank">Table 7!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 8:</p>
-                    <a href="./New Index-4/new-index4.html" target="_blank">Table 8!</a>
+                    <a href="./Index8/index8.html" target="_blank">Table 8!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 9:</p>
-                    <a href="./New Index-5/new-index5.html" target="_blank">Table 9!</a>
+                    <a href="./Index9/index9.html" target="_blank">Table 9!</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="table-card">
                     <p>Click here & Explore Table 10:</p>
-                    <a href="./New Index-6/new-index6.html" target="_blank">Table 10!</a>
+                    <a href="./Index10/index10.html" target="_blank">Table 10!</a>
                 </div>
             </div>
 
@@ -82,6 +82,5 @@
     </div>
 <!-- JS  -->
 <script src="./Index/js1/jquery.min.js"></script>
-<script src="./landing-page-script.js"></script>
 </body>
 </html>
