--- a/Index/index.html
+++ b/Index/index.html
@@ -45,6 +45,7 @@
                 Select Desired Data Center Location
               </p>
             </div>
+            <!-- Div for Headers -->
             <div class="tabs-header mt-4 d-flex" id="tabhead">
               <ul
                 class="btn-group list-inline mx-auto justify-content-center"
@@ -114,6 +115,7 @@
             </div>
           </div>
         </div>
+        <!-- Div for Periodheaders  -->
         <div class="col-md-12 text-center mt-4" id="periodheader">
           <ul class="btn-group">
             <li
