--- a/Index/index.html
+++ b/Index/index.html
@@ -8,33 +8,17 @@
     <meta name="description" content="" />
 
     <!-- CSS -->
+    <link href="./css1/bootstrap.min.css" rel="stylesheet" class="ltr" onload="if(media!='all')media='all'" />
 
-    <link
-      href="./css1/bootstrap.min.css"
-      rel="stylesheet"
-      class="ltr"
-      onload="if(media!='all')media='all'"
-    />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 
     <link href="./css1/main-style.css" rel="stylesheet" />
 
-    <link
-      href="./css1/slick.css"
-      rel="stylesheet"
-      onload="if(media!='all')media='all'"
-    />
+    <link href="./css1/slick.css" rel="stylesheet" onload="if(media!='all')media='all'" />
   </head>
   <body>
     <div class="box-container limit-width">
-      <section
-        id="radioplans"
-        class="tabs pricing special sec-normal bg-seccolorstyle d-none d-lg-block d-xl-block"
-      >
+      <section id="radioplans" class="tabs pricing special sec-normal bg-seccolorstyle d-none d-lg-block d-xl-block">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-center">
@@ -141,6 +125,7 @@
             </li>
           </ul>
         </div>
+        <!-- Div for all Slick Contents  -->
         <div class="tabs-content">
           <div class="tabs-item active show">
             <div class="slick pt-0 bg-seccolorstyle">
