--- a/landing-page.html
+++ b/landing-page.html
@@ -12,7 +12,7 @@
     <div class="container text-center">
         <div class="row">
             <div class="col-md-12">
-                <h2 class="section-heading">Welcome to <strong>ASTGD</strong></h2>
+                <h2 class="section-heading">Welcome to <strong>All in One Pricing Table</strong></h2>
                 <p class="section-subheading">Click to check our <strong>Pricetable</strong> models</p>
             </div>
         </div>
